--- a/UORespawnApp/UORespawnApp.csproj
+++ b/UORespawnApp/UORespawnApp.csproj
@@ -142,6 +142,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Data\PACKS\" />
       <Folder Include="UORespawnSystem\Entities\BinaryModels\" />
     </ItemGroup>
 
