--- a/UORespawnApp/UORespawnApp.csproj
+++ b/UORespawnApp/UORespawnApp.csproj
@@ -124,11 +124,22 @@
     <!-- PACKS: Spawn pack system folders -->
     <!-- Approved: Unpacked packs ready to use (Debug) / ZIPs extracted on first launch (Release) -->
     <!-- Imported: User-imported packs (empty on publish) -->
-    <!-- Backup: Original ZIPs for reset functionality -->
+    <!-- Backup: Original ZIPs for reset functionality + folders for Git repo -->
     <ItemGroup>
-      <!-- Include Backup ZIPs (for reset functionality) -->
+      <!-- Include Backup ZIPs (for reset functionality and release builds) -->
       <None Include="Data\PACKS\Backup\*.zip" Condition="Exists('Data\PACKS\Backup\')">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <!-- Include Backup folders with all contents (for Git repo/Debug builds) -->
+      <!-- This copies DefaultPack folder from Backup so it can be extracted to Approved -->
+      <None Include="Data\PACKS\Backup\**\*.*" Exclude="Data\PACKS\Backup\*.zip;Data\PACKS\Backup\.gitkeep">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <Link>Data\PACKS\Backup\%(RecursiveDir)%(Filename)%(Extension)</Link>
+      </None>
+      <!-- Include Created folder contents (for user-created packs) -->
+      <None Include="Data\PACKS\Created\**\*.*" Exclude="Data\PACKS\Created\.gitkeep" Condition="Exists('Data\PACKS\Created\')">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <Link>Data\PACKS\Created\%(RecursiveDir)%(Filename)%(Extension)</Link>
       </None>
       <!-- Preserve empty folder structure -->
       <None Include="Data\PACKS\Approved\.gitkeep" Condition="Exists('Data\PACKS\Approved\.gitkeep')">
@@ -138,6 +149,9 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Include="Data\PACKS\Backup\.gitkeep" Condition="Exists('Data\PACKS\Backup\.gitkeep')">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Include="Data\PACKS\Created\.gitkeep" Condition="Exists('Data\PACKS\Created\.gitkeep')">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
